# copilotbrowser

./: .axe-linter.yml  .dockerignore  .gitignore  .markdownlint.json  .mcp.json  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  SUPPORT.md  cspell.json  docker-compose.yml  eslint.config.mjs  install.sh  package-lock.json  package.json  tsconfig.json
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: deploy-pages.yml
browser_patches/: roll_from_upstream.sh
browser_patches/webkit/: pw_run.sh
browser_patches/webkit/embedder/Playwright/mac/: AppDelegate.h  AppDelegate.m  BrowserWindowController.m  CMakeLists.txt  MainMenu.xib
copilotbrowser-assets/: README.md  assets-manifest.json
copilotbrowser-assets/favicons/: browserconfig.xml  site.webmanifest
docker/: entrypoint.sh
docs/site/: docusaurus.config.ts  fix-labels.js  fix-links.js  fix-meta-spacing.js  fix-metadata.js  fix-polish.js  package-lock.json  sidebars.ts
docs/src/: accessibility-testing-java.md  accessibility-testing-js.md  actionability.md  api-testing-csharp.md  api-testing-java.md  api-testing-js.md  api-testing-python.md  aria-snapshots.md  auth.md  best-practices-js.md  browser-contexts.md  browsers.md  canary-releases-js.md  chrome-extensions-js-python.md  ci-intro.md  ci.md  clock.md  codegen-intro.md  codegen.md  debug.md  dialogs.md  docker.md  downloads.md  events.md  (+88 more)
runbooks/: AgentFlashcards.md  CopilotStudioUI.md  L1 Sample Agent.md  PowerAgentBuilder.md  PowerTask.md  copilot.log.md  log2.md  powermcpcommands.md  readme.md
scripts/: validate-extension.js  validate-mcp.js
tests/: tsconfig.json
tmp/: smoke-test.js
utils/: build_android_driver.sh  check_deps.js  eslint-plugin-notice-compat.mjs  generate_channels.js  generate_cli_help.js  generate_dotnet_channels.js  generate_injected.js  generate_third_party_notice.js  kill_watch.sh  pack_package.js  print_versions.js  publish.js  publish_all_packages.sh  render_release_notes.mjs  roll_browser.js  upload_flakiness_dashboard.sh  workspace.js
(+548 files in other folders)
